--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "notion-blog",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next dev",
     "start": "next start",
     "build": "next build && node .next/server/build-rss.js",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore",
