--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismjs": "1.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jsx-parser": "^2.4.0",
     "uuid": "8.1.0"
   },
   "devDependencies": {
